Add version 0.6